# whosdat

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  test_data.json
scripts/: download.sh
src/: main.rs
static/: index.html  people.json
templates/: index.html
