[package]
name = "whosdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0"
actix-web = "4"
clap = { version = "4", features = ["derive"] }
rand = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "0"
tokio = { version = "1", features = ["full"] }
